--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.png">
   </head>
 
   <body>
@@ -85,7 +85,7 @@
               <div class="item">
                 <img src="images/saleバナー.jpg" alt="">
                 <img src="images/試作イメージ１のコピー.jpg" alt="">
-                <img src="images/yuhi.banerのコピー.jpg" alt="">
+                <img src="images/ヘッダー1.png" alt="">
               </div>
             </div>
         </div>
@@ -161,15 +161,9 @@
       <section class="contact section" id="contact">
         <div class="inner">
           <h2 class="title">CONTACT</h2>
-          <p class="lead">
-            お問い合わせは、<br class="sp-only">
-            メールにてお願いいたします。
-          </p>
-          <div class="contact-list">
-            <a class="contact-item" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
-            <a class="contact-item" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
-            <span class="contact-item">yuna.iseki@gmail.com</span>
-          </div>
+          
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAYBOvTyRc7jjg0h94g5QXxtp59mjKAMv23DyU0xvuR5wo-w/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+
         </div>
       </section>
       <!-- contact -->
