--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html> 
+<!DOCTYPE HTML> 
 <html lang="ja">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>YUNA MICHIDA PORTFOLIO</title>
     <meta name="description" content="webデザイナーYUNA MICHIDA ポートフォリオ">
     <meta name="viewport" content="width=device-width,initial-scale=1">
