--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -57,7 +57,7 @@
             <h3 class="work-title"> サイト作品</h3>
             <div class="grid">
               <div class="item"> 
-                <a href="https://yuna-portfolio.herokuapp.com/work/homepage1.html" target="_blank"> 
+                <a href="work/homepage01/index.html" > 
                   <img src="images/homepage1.jpg" alt="">
                 </a>
                 <p>クリニックサイト</p>
