リンクpass修正

--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -63,21 +63,27 @@
                 <p>クリニックサイト</p>
               </div>
               <div class="item">
-                <a href="../homepage/美容院WEBサイト/index.html">
+                <a href="work/homepage02/index.html">
                   <img src="images/homepage2.jpg" alt="">
                 </a>
                 <p>美容院サイト</p>  
               </div>
-              <div class="item" href="../homepage/WEBマガジンサイト/index.html">
-                <img src="images/homepage3.jpg" alt="">
+              <div class="item">
+                <a href="work/homepage03/index.html">
+                  <img src="images/homepage3.jpg" alt="">
+                </a>
                 <p>WEBマガジンサイト</p>
               </div>
               <div class="item">
-                <img src="images/homepage4.jpg" alt="">
+                <a href="work/homepage04/index.html">
+                  <img src="images/homepage4.jpg" alt="">
+                </a>  
                 <p>オンラインスクールサイト</p>
               </div>
               <div class="item">
-                <img src="images/homepage５.jpg" alt="">
+                <a href="work/WBCcafe作業完成/index.html">
+                  <img src="images/homepage５.jpg" alt="">
+                </a>
                 <p>Cafeサイト</p>
               </div>
             </div><!--grig1--> 
@@ -161,10 +167,8 @@
       <!--  contact-->
       <section class="contact section" id="contact">
         <div class="inner">
-          <h2 class="title">CONTACT</h2>
-          
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAYBOvTyRc7jjg0h94g5QXxtp59mjKAMv23DyU0xvuR5wo-w/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-
+          <h2 class="title">CONTACT</h2>          
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAYBOvTyRc7jjg0h94g5QXxtp59mjKAMv23DyU0xvuR5wo-w/viewform?embedded=true" width="640" height="640" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </div>
       </section>
       <!-- contact -->
