--- a/www/html/work/homepage02/menu.html
+++ b/www/html/work/homepage02/menu.html
@@ -20,9 +20,9 @@
 
 		<nav>
 			<ul>
-				<li><a href="#">ホーム</a></li>
-				<li><a href="#">メニュー一覧</a></li>
-				<li><a href="#">ご予約</a></li>
+				<li><a href="index.html">ホーム</a></li>
+				<li><a href="menu.html">メニュー一覧</a></li>
+				<li><a href="contact.html">ご予約</a></li>
 			</ul>
 		</nav>
 
@@ -69,7 +69,7 @@
 	<!-- 右ここから -->
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="#">ご予約・お問い合わせ</a></li>
+			<li class="box-shadow"><a id="contact" href="contact.html">ご予約・お問い合わせ</a></li>
 			<li class="box-shadow"><a id="blog" href="#">スタイリストブログ</a></li>
 		</ul>
 	</div>
