画像の置き換え

--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -35,7 +35,7 @@
       <!-- main-visual -->
       <div class="main-visual">
         <div class="big-bg">
-          <img src="images/IMG_4488.png">
+          <img src="images/IMG_4488.jpg">
         </div>
         <div class="main-visual-inner">
           <p class="main-visual-title">YUNA MICHIDA</p>
