--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -90,9 +90,40 @@
             <h3 class="work-title"> バナー作品</h3>
             <div class="grid">
               <div class="item">
-                <img src="images/saleバナー.jpg" alt="">
-                <img src="images/試作イメージ１のコピー.jpg" alt="">
-                <img src="images/ヘッダー1.png" alt="">
+                <a href="work/benner-page/banner1.html">
+                  <img src="images/saleバナー.jpg" alt="">
+                </a>
+                <p>SALEバナー</p>
+              </div>
+              <div class="item">
+                <a href="#">
+                  <img src="images/ヘッダー1.png" alt="">
+                </a>
+                <p>twitterヘッダー1</p>
+              </div> 
+              <div class="item">
+                <a href="#">
+                  <img src="images/試作イメージ１.jpg" alt="">
+                </a>
+                <p>twitterヘッダー2</p>
+              </div>
+              <div class="item">
+                <a href="#">
+                  <img src="images/母の日baner.jpg" alt="">
+                </a>
+                <p>母の日バナー</p>
+              </div>
+              <div class="item">
+                <a href="#">
+                  <img src="images/benner2.jpg" alt="">
+                </a>
+              <p>スープカレーバナー</p>
+              </div>
+              <div class="item">
+                <a href="#">
+                  <img src="images/アートボード 2.jpg" alt="">
+                </a>
+                <p>日焼け止めバナー</p>
               </div>
             </div>
         </div>
@@ -107,8 +138,7 @@
                         <div class="skill-body">
                             <h3 class="skill-name">HTML5/CSS3</h3>
                                 <p class="skill-text">
-                                    ★★★☆☆Lev.３<br>
-                                    HTML,CSSの基本的なコード</p>
+                                    HTML,CSSの基本的なコードの習得からレスポンシブデザインを手掛けたウェブホームページも作成することができました</p>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -116,8 +146,8 @@
                     <div class="skill-body">
                         <h3 class="skill-name">Photoshop</h3>
                         <p class="skill-text">
-                        ★★★☆☆Lev.３<br>
-                      基本操作から写真の加工、WEBサイト模写,バナー作成、ワイヤーフレームができます</p>
+                      <p>基本操作から写真の加工、WEBサイト模写,バナー作成、ワイヤーフレームができます。<br>
+                      ウェブデザインに興味を持つきっかけにもなり、一番自信のあるスキルです。</p>
                     </div>
                     </div>
                     <div class="skill-item">
@@ -125,7 +155,7 @@
                     <div class="skill-body">
                         <h3 class="skill-name">JavaScript</h3>
                         <p class="skill-text">
-                        プロゲートで学んだ程度。複雑なコードは書けません。</p>
+                        プロゲートで基礎は習得済み。スライドショーやメニューに使用したデザインも行っていきたいです。</p>
                     </div>
                   </div>
                     <div class="skill-item">
@@ -144,24 +174,50 @@
       <!-- /skill -->
       <!-- profile -->
       <section class="profile section" id="profile">
-        <div class="inner">
+        <div class="wrapper">
           <h2 class="title">PROFILE</h2>
           <div class="profile">
             <p class="profile-img">
               <img src="images/profile.jpg" alt="">
             </p>
-            <div class="profile-body">
-              <p>Yuna Michida /1992.11.01</p>
-              <p>
-              　短大卒業後北九州で保育士として２年働く。
-                東京で株式会社ベイクルーズに入社。
-                靴の販売員として働く。個人売り上げは３年連続１００％以上をキープ。
-                旗艦店への移動レイアウト担当を行うなう。レイアウトについての楽しさを学ぶ。
-                2021/03/1より独学でウェブデザイナーを学ぶ。土木建築業のホームページを作成。ココナラを使い主にバナーやホームページの作成。6月より職業訓練校を受講。
-              </p>
+            <div class="profile-about">
+              <div class="profile-about-content">
+                <div class="profile-about-item">
+                  <dt class="profile-about-head">  
+                    <p>   経歴：</p>
+                  </dt>
+                  <dd class="profile-about-body">
+                    <p>  
+                      平成25年3月　東筑紫短期大学保育学科卒業<br>
+                      平成25年4月　保育士として保育園勤務<br>
+                      平成27年3月　保育士退職<br>
+                      平成27年6月　アパレル会社へ販売員として入社<br>
+                      令和03年3月　WEBデザインの勉強開始<br>
+                      令和03年4月　アパレル会社退職<br>
+                    </p>
+                  </dd>
+                </div>
+                <div class="profile-about-item">
+                  <dt class="profile-about-head">  
+                    <p>WEBデザイナーを<br>
+                      目指すきっかけ：</p>
+                  </dt>
+                  <dd class="profile-about-body">
+                    <p>友達と旅行にいく為、しおりをphotoshopで作成した時<br>
+                      とても楽しく気が付くと夢中で作っていました。<br>
+                      他にできることはないか考え、webデザイナーの仕事を知り<br>
+                      興味を持ちました。<br>
+                      また顧客のヒアリングを行ったり思いを形にできるという所も<br>
+                      前職の経験が生かせると思いました。<br>
+                      また前職では、商品のレイアウトの担当を3年行っており、<br>
+                      レイアウトの重要性や効果等学んだ経験も生かして行けたらと思います。<br>
+                    </p>
+                  </dd>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        </div>  
       </section>
       <!-- /profile -->　　
       <!--  contact-->
