--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -97,13 +97,13 @@
               </div>
               <div class="item">
                 <a href="#">
-                  <img src="images/ヘッダー1.png  " alt="">
+                  <img src="images/ヘッダー1.jpg  " alt="">
                 </a>
                 <p>twitterヘッダー1</p>
               </div> 
               <div class="item">
                 <a href="#">
-                  <img src="images/試作イメージ１.jpg" alt="">
+                  <img src="images/ヘッダー２.jpg" alt="">
                 </a>
                 <p>twitterヘッダー2</p>
               </div>
@@ -121,7 +121,7 @@
               </div>
               <div class="item">
                 <a href="#">
-                  <img src="images/アートボード 2.jpg" alt="">
+                  <img src="images/日焼け止め.jpg" alt="">
                 </a>
                 <p>日焼け止めバナー</p>
               </div>
