--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -97,13 +97,13 @@
               </div>
               <div class="item">
                 <a href="#">
-                  <img src="images/ヘッダー1.jpg  " alt="">
+                  <img src="images/twitterバナー.jpg" alt="">
                 </a>
                 <p>twitterヘッダー1</p>
               </div> 
               <div class="item">
                 <a href="#">
-                  <img src="images/ヘッダー２.jpg" alt="">
+                  <img src="images/Twitter1.jpg" alt="">
                 </a>
                 <p>twitterヘッダー2</p>
               </div>
