--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -97,7 +97,7 @@
               </div>
               <div class="item">
                 <a href="#">
-                  <img src="images/ヘッダー1.png" alt="">
+                  <img src="images/悠聖バナー.jpg" alt="">
                 </a>
                 <p>twitterヘッダー1</p>
               </div> 
