バナーページ作成

--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -96,31 +96,31 @@
                 <p>SALEバナー</p>
               </div>
               <div class="item">
-                <a href="#">
+                <a href="work/benner-page/banner2.html">
                   <img src="images/twitter0.jpg" alt="">
                 </a>
                 <p>twitterヘッダー1</p>
               </div> 
               <div class="item">
-                <a href="#">
+                <a href="work/benner-page/banner3.html">
                   <img src="images/Twitter1.jpg" alt="">
                 </a>
                 <p>twitterヘッダー2</p>
               </div>
               <div class="item">
-                <a href="#">
+                <a href="work/benner-page/banner4y.html">
                   <img src="images/母の日baner.jpg" alt="">
                 </a>
                 <p>母の日バナー</p>
               </div>
               <div class="item">
-                <a href="#">
+                <a href="work/benner-page/banner5.html">
                   <img src="images/benner2.jpg" alt="">
                 </a>
               <p>スープカレーバナー</p>
               </div>
               <div class="item">
-                <a href="#">
+                <a href="work/benner-page/banner6.html">
                   <img src="images/日焼け止め.jpg" alt="">
                 </a>
                 <p>日焼け止めバナー</p>
