--- a/www/html/work/benner-page/banner1.html
+++ b/www/html/work/benner-page/banner1.html
@@ -30,18 +30,18 @@
         <!-- main --> 
         <main>
             <article>
-                <h2 class="work-pagetop">
-                    <div class="work-page-title">期間限定セール</span>
-                </h2>
+                    <h2 class="work-page-title">セールバナー</h2>
                     <div class="work-content">
                         <img src="../../images/saleバナー.jpg" alt="">
                     </div>
 
                 <div class="work-comment">
+                    <h3 class="title-border">デザインイメージ</h3><br>
                     <p>期間限定セールを一番見せたい文言として作成し、<br>
-                       クリックするメリットを伝えています。<br>
-                    　　カラーは背景に赤、フォントに黄色を使用しカラーだけでも<br>
-                        セール感の伝わる目立つバナーに仕上げました。</p>
+                        クリックするメリットを伝えています。背景は、<br>
+                        赤フォントに黄色を使用することでカラーだけでも<br>
+                        セール感の伝わる目立つバナーに仕上げました。
+                    </p>
                 </div>
             </article>       
         </main>    
