--- a/www/html/work/benner-page/banner6.html
+++ b/www/html/work/benner-page/banner6.html
@@ -42,7 +42,7 @@
                         演出し、ベベルとエンボスでメリットを目立たせています<br>
                         ヘッダーは淡いブルーでゴールドのグラデーションフレーム<br>
                         を使用することで上品で優しいイメージを作っています。<br>
-                        背景を白にしてクリアな印象にしました。<br>
+                        背景を白にして、透明感をイメージしました。<br>
                     </p>    
                 </div>
             </article>       
