--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -205,12 +205,14 @@
                   <dd class="profile-about-body">
                     <p>友達と旅行にいく為、しおりをphotoshopで作成した時<br>
                       とても楽しく気が付くと夢中で作っていました。<br>
-                      他にできることはないか考え、webデザイナーの仕事を知り<br>
-                      興味を持ちました。<br>
-                      また顧客のヒアリングを行ったり思いを形にできるという所も<br>
-                      前職の経験が生かせると思いました。<br>
+                      それからは独学でwebデザインの勉強をはじめました。<br>
+                      youtubeや、動画購入サイトで購入した教材、書籍でひたすら
+                      勉強してまいりました。”やりたいと思ったら即行動する”<br>
+                      行動力とコミニュケーションには自信があります。<br>
+                      また顧客のヒアリングを行ったり思いを形にしていくという<br>
+                      共通点もあり、前職の経験が生かせると思いました。<br>
                       また前職では、商品のレイアウトの担当を3年行っており、<br>
-                      レイアウトの重要性や効果等学んだ経験も生かして行けたらと思います。<br>
+                      レイアウトの重要性や効果等学んだ経験も生かしていきたいと思います。<br>
                     </p>
                   </dd>
                 </div>
