--- a/www/html/work/benner-page/banner3.html
+++ b/www/html/work/benner-page/banner3.html
@@ -43,7 +43,7 @@
                     <h3 class="title-border">希望イメージ</h3>
                     <p>
                         アニメのキャラ設定でタコとウツボがイメージになっている<br>
-                        素材屋のもので全て作って欲しい<br>
+                        いらすとやの素材で全て作って欲しい<br>
                         背景は夢かわな雰囲気<br>
                         オタクやメンヘラが騒いでいる
                     </p>
