--- a/www/html/work/benner-page/banner2.html
+++ b/www/html/work/benner-page/banner2.html
@@ -48,7 +48,7 @@
                     <h3 class="title-border">好きなテーマやカラー</h3>
                     <p>白、水色</p>
                     <h3 class="title-border">使用したいキャッチコピー</h3>
-                    <p>これって言うのは思いついてないけど、親身に寄り添う系の言葉がいい</p>
+                    <p>親身に寄り添う系の言葉がいい</p>
                     <h3 class="title-border">デザインへの落とし込み</h3>
                     <p>クライアントの要望で怪しい”アカウントと思われたくない”<br>
                         ＝クリアな印象にしたいということで、希望の白と水色の<br>
