--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -200,7 +200,9 @@
                       また顧客のヒアリングを行ったり思いを形にしていくという<br>
                       共通点もあり、前職の経験が生かせると思いました。<br>
                       また前職では、商品のレイアウトの担当を3年行っており、<br>
-                      レイアウトの重要性や効果等学んだ経験も生かしていきたいと思います。<br>
+                      レイアウトの重要性や効果等学んだ経験があります。<br>
+                      販売で培ったノウハウやクライアントの求めるものを<br>
+                      表現したいと思っています。
                     </p>
                   </dd>
                 </div>
