--- a/www/html/work/benner-page/banner2.html
+++ b/www/html/work/benner-page/banner2.html
@@ -55,7 +55,8 @@
                         テーマカラーをそのままデザインに使用。タイトルは分かり<br>
                         やすく『目的』を使用。サブタイトルは柔らかいブラウンの<br>
                         カラー、色鉛筆の優しいタッチで柔らかさを黄色で親しみや<br>
-                        すい印象を加えました。</p>
+                        すい印象を加えました。
+                    </p>
                 </div>
             </article>       
         </main>    
