--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -9,7 +9,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Poiret+One&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.jpg">
   </head>
@@ -35,7 +36,7 @@
       <!-- main-visual -->
       <div class="main-visual">
         <div class="big-bg">
-          <img src="images/IMG_4488.jpg">
+          <img src="images/evergreens-and-dandelions-mcZANB5Ut7k-unsplash.jpg">
         </div>
         <div class="main-visual-inner">
           <p class="main-visual-title">YUNA MICHIDA</p>
@@ -166,7 +167,7 @@
           <h2 class="title">PROFILE</h2>
           <div class="profile">
             <p class="profile-img">
-              <img src="images/profile.jpg" alt="">
+              <img src="images/yuna1.jpg" alt="">
             </p>
             <div class="profile-about">
               <div class="profile-about-content">
