--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -173,7 +173,7 @@
               <div class="profile-about-content">
                 <div class="profile-about-item">
                   <dt class="profile-about-head">  
-                    <p>   経歴：</p>
+                    <p>　　　　　経歴：</p>
                   </dt>
                   <dd class="profile-about-body">
                     <p>  
@@ -192,18 +192,31 @@
                       目指すきっかけ：</p>
                   </dt>
                   <dd class="profile-about-body">
-                    <p>友達と旅行にいく為、しおりをphotoshopで作成した時<br>
-                      とても楽しく気が付くと夢中で作っていました。<br>
-                      それからは独学でwebデザインの勉強をはじめました。<br>
+                    <p>友達と旅行にいく為、しおりをphotoshopで作成した時
+                      とても楽しく気が付くと夢中で作っていました。
+                      それからは独学でwebデザインの勉強をはじめました。
                       youtubeや、動画購入サイトで購入した教材、書籍でひたすら
-                      勉強してまいりました。”やりたいと思ったら即行動する”<br>
-                      行動力とコミニュケーションには自信があります。<br>
-                      また顧客のヒアリングを行ったり思いを形にしていくという<br>
-                      共通点もあり、前職の経験が生かせると思いました。<br>
-                      また前職では、商品のレイアウトの担当を3年行っており、<br>
-                      レイアウトの重要性や効果等学んだ経験があります。<br>
-                      販売で培ったノウハウやクライアントの求めるものを<br>
+                      勉強してまいりました。”やりたいと思ったら即行動する”
+                      行動力とコミニュケーションには自信があります。
+                      また顧客のヒアリングを行ったり思いを形にしていくという
+                      共通点もあり、前職の経験が生かせると思いました。
+                      また前職では、商品のレイアウトの担当を3年行っており、
+                      レイアウトの重要性や効果等学んだ経験があります。
+                      販売で培ったノウハウやクライアントの求めるものを
                       表現したいと思っています。
+                    </p>
+                  </dd>
+                </div>
+                <div class="profile-about-item">
+                  <dt class="profile-about-head">  
+                    <p>将来的に<br>
+                      どうなりたいか：</p>
+                  </dt>
+                  <dd class="profile-about-body">
+                    <p>デザインを通して思いを形に、今求められている最高のクオリティを
+                      より良いデザインとして発信していきたい。
+                      時代の流れに沿った最先端の技術を取り入れたwebデザインやUXの
+                      向上も考えた表現方法などの制作を行っていきたい。
                     </p>
                   </dd>
                 </div>
