プロフィール文章修正

--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -216,7 +216,7 @@
                     <p>デザインを通して思いを形に、今求められている最高のクオリティを
                       より良いデザインとして発信していきたい。
                       時代の流れに沿った最先端の技術を取り入れたwebデザインやUXの
-                      向上も考えた表現方法などの制作を行っていきたい。
+                      向上も考えた表現方法等用いた制作を行っていきたい。
                     </p>
                   </dd>
                 </div>
