--- a/www/html/portfolio.html
+++ b/www/html/portfolio.html
@@ -10,7 +10,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Poiret+One&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.jpg">
   </head>
@@ -82,6 +82,24 @@
                 <p>オンラインスクールサイト</p>
               </div>
             </div><!--grig1--> 
+            <h3 class="work-title"> デザインカンプ</h3>
+            <div class="grid">
+              <div class="item">
+                <a href="work/desingComp/desingComp.html">
+                  <img src="images/TKGdcp.jpg" alt="">
+                </a>             
+              </div>
+              <div class="item">
+                <a href="work/benner-page/banner1.html">
+                  <img src="images/TKGdcp.jpg" alt="">
+                </a>             
+              </div>
+              <div class="item">
+                <a href="work/benner-page/banner1.html">
+                  <img src="images/TKGdcp.jpg" alt="">
+                </a>             
+              </div>
+            </div>  
             <h3 class="work-title"> バナー作品</h3>
             <div class="grid">
               <div class="item">
