--- a/www/html/work/TKChomepage/index.html
+++ b/www/html/work/TKChomepage/index.html
@@ -25,12 +25,24 @@
                     </nav>
                     <img class="header-btn" src="images2/TKCホームページjpg_03.jpg" href="">
                 </div>    
-            </header>   
+            </header>
+            <!-- MainVisual -->
+            <section id="company">
+                <div class="company-innner">     
+                    <h2 class="company-title"></h2>
+                    <span class="textline"><p>
+                        納期期限内に無駄のない仕事をもっとうに</span>
+                        丁寧かつ迅速、安全に<br>
+                        仕事を仕上げていきます
+                    
+                </div>
+            </section>
+            <!-- News.Blog -->
+            <section class="newsblog section" id="newsblog">
+            <div class="newsblog">
 
-            <img class="bg-img" src="images2/tkc_06.jpg" alt="">
-            <img class="header-btn" src="images2/tkc_17.png" href="">
-
-            <div class="newsblog"></div>
+            </div>
+        </section>    
             
             <div class="Construction"></div>
 
